updated to reflect replacement of compile and compile_to_utf8 with new function read_hip

--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ The migbirdHarvestData package provides an easy-to-use set of R functions for th
 
 Tasks that can be accomplished with this package include:
 
-* `compile` and `compile_to_utf8` import data
+* `read_hip` imports data
 * `tidy` renames field names
 * `validate` checks for table-wide repetition
 * `proof` checks values for errors
