--- a/vignettes/migbirdHarvestData_workflow.Rmd
+++ b/vignettes/migbirdHarvestData_workflow.Rmd
@@ -13,8 +13,7 @@ vignette: >
 
 - [Introduction](#introduction)
 - [Stage 1: Import Data](#stage-1-import-data)
-    - [compile](#compile)
-    - [compile_to_utf8](#compile_to_utf8)
+    - [read_hip](#read_hip)
     - [tidy](#tidy)
     - [validate](#validate)
     - [proof](#proof)
@@ -52,56 +51,27 @@ install_github("USFWS/migbirdHarvestData")
 
 ## Stage 1: Import Data
 
-### compile
+### read_hip
 
-The first step is to import .txt files containing harvest data. To do this, we attempt to use the `compile` function.
+The first step is to import .txt files containing HIP data. To do this, we use the `read_hip` function.
 
 
 ```r
 library(migbirdHarvestData)
 
-DL1202 <- compile(path = "C:/HIP/DL_1202")
+DL1202 <- read_hip("C:/HIP/DL_1202")
 ```
 
 ```
-## # A tibble: 4 x 3
-##   filepath                      encoding   confidence
-##   <chr>                         <chr>           <dbl>
-## 1 C:/HIP/DL_1202/MO20201216.txt ISO-8859-1      0.27 
-## 2 C:/HIP/DL_1202/NE20201209.txt ISO-8859-1      0.290
-## 3 C:/HIP/DL_1202/NE20201209.txt ISO-8859-2      0.22 
-## 4 C:/HIP/DL_1202/SC20201202.txt ISO-8859-1      0.28
-```
-
-```
-## Attention: Directory contains file(s) with non-UTF-8 encoding.
-```
-
-The error message above tells us that `compile` did not work because the files contained in the directory are not all encoded as UTF-8. We are provided a tibble of paths to .txt files that threw the error with additional information about their non-UTF-8 encodings. In this example, Latin-1 (ISO-8859-1) and Latin-2 (ISO-8859-2) character sets (which include letters with accents such as ê and á) were the reason the files in the directory were not compatible with the function.
-
-To remedy the situation, we use a different function, `compile_to_utf8`.
-
-### compile_to_utf8
-
-Encoding issues are a nuisance, but `compile_to_utf8` will identify and convert non-UTF-8 text files before importing from them into R from the supplied directory. Please note that this function will overwrite existing files but no changes to the data will occur.
-
-
-```r
-DL1202_utf8 <- compile_to_utf8(path = "C:/HIP/DL_1202")
-```
-
-```
-## # A tibble: 4 x 3
-##   filepath                      encoding   confidence
-##   <chr>                         <chr>           <dbl>
-## 1 C:/HIP/DL_1202/MO20201216.txt ISO-8859-1      0.27 
-## 2 C:/HIP/DL_1202/NE20201209.txt ISO-8859-1      0.290
-## 3 C:/HIP/DL_1202/NE20201209.txt ISO-8859-2      0.22 
-## 4 C:/HIP/DL_1202/SC20201202.txt ISO-8859-1      0.28
-```
-
-```
-## Attention: File(s) with non-UTF-8 encoding will be re-written.
+## Warning: 2936 parsing failures.
+## row col   expected     actual                            file
+##   1 X23 0 chars    0          'C:/HIP/DL_1202/MT20201216.txt'
+##   1 NA  24 columns 23 columns 'C:/HIP/DL_1202/MT20201216.txt'
+##   2 X23 0 chars    0          'C:/HIP/DL_1202/MT20201216.txt'
+##   2 NA  24 columns 23 columns 'C:/HIP/DL_1202/MT20201216.txt'
+##   3 X23 0 chars    0          'C:/HIP/DL_1202/MT20201216.txt'
+## ... ... .......... .......... ...............................
+## See problems(...) for more details.
 ```
 
 ### tidy
@@ -110,7 +80,7 @@ After data are imported, we `tidy`:
 
 
 ```r
-DL1202_tidied <- tidy(DL1202_utf8)
+DL1202_tidied <- tidy(DL1202)
 ```
 
 This function renames columns and does simple mutations, such as:
@@ -227,10 +197,10 @@ errorPlot_fields(DL1202_proofed, loc = "all")
 
 
 ```r
-errorPlot_fields(DL1202_proofed, loc = "SC")
+errorPlot_fields(DL1202_proofed, loc = "NC")
 ```
 
-<img src="figure/errorfieldsplotsc-1.png" title="Figure 2. Plot of all South Carolina's errors by field name." alt="Figure 2. Plot of all South Carolina's errors by field name." width="500" style="display: block; margin: auto;" />
+<img src="figure/errorfieldsplotsc-1.png" title="Figure 2. Plot of all North Carolina's errors by field name." alt="Figure 2. Plot of all North Carolina's errors by field name." width="500" style="display: block; margin: auto;" />
 
 The year in which the HIP data were collected can also be specified in `errorPlot_fields` to visualize the proportion of "errors" created by youth hunters and Canadian zip codes, since these values fall outside the expected parameters of the `proof` function. It is encouraged to use `specify` when error counts are high to increase transparency by revealing which errors are attributable to a specific cause. This feature should also help maintain confidence in the integrity of the data.
 
@@ -681,7 +651,7 @@ writeReport(
 
 Some of these functions require a lot of memory to run. To help your R process these data, especially when working with the large season totals, you can do a few things:
 
-1. Remove objects from the environment. If you have already run `compile`, `tidy`, and `proof`, you may no longer need your original dataframe or your tidied dataframe, since most error checking functions work from the proofed or corrected versions of the data. To remove an unneeded object like the tidied dataframe, run `rm(DL1202_tidied)`.
+1. Remove objects from the environment. If you have already run `read_hip`, `tidy`, and `proof`, you may no longer need your original dataframe or your tidied dataframe, since most error checking functions work from the proofed or corrected versions of the data. To remove an unneeded object like the tidied dataframe, run `rm(DL1202_tidied)`.
 
 2. Check your memory using `memory.limit()`
 
